feature: finish footer

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
     </button>
 </main>
 <footer class="outer-container footer flex justify-center" style="margin-top: 180px;">
-    <div class="container" style="padding-top: 41px;">
+    <div class="container" style="padding-top: 41px; padding-bottom: 50px">
         <div class="flex justify-between">
             <div class="logo flex align-center">
                 <a class="relative" style="display: block; height: 52px; width: 82px" href="/">
@@ -707,23 +707,71 @@
         <div class="flex justify-between align-end text-white" style="margin-top: 44px;">
             <div class="flex flex-column" style="gap: 10px">
                 <div class="flex align-center">
-                    <div class="social-ellipse mr-12px"></div>
-                    Facebook
+                    <div class="social-ellipse mr-12px">
+                        <object data="/assets/svg/social/facebook.svg"></object>
+                    </div>
+                    <a href="https://www.facebook.com/">
+                        Facebook
+                    </a>
+
                 </div>
                 <div class="flex align-center">
-                    <div class="social-ellipse mr-12px"></div>
-                    Twitter
+                    <div class="social-ellipse mr-12px">
+                        <object data="/assets/svg/social/twitter.svg"></object>
+                    </div>
+                    <a href="https://twitter.com/">
+                        Twitter
+                    </a>
                 </div>
                 <div class="flex align-center">
-                    <div class="social-ellipse mr-12px"></div>
-                    Instagram
+                    <div class="social-ellipse mr-12px">
+                        <object data="/assets/svg/social/instagram.svg"></object>
+                    </div>
+                    <a href="https://www.instagram.com/">
+                        Instagram
+                    </a>
                 </div>
                 <div class="flex align-center">
-                    <div class="social-ellipse mr-12px"></div>
-                    YouTube
+                    <div class="social-ellipse mr-12px">
+                        <object data="/assets/svg/social/youtube.svg"></object>
+                    </div>
+                    <a href="https://youtube.com">
+                        YouTube
+                    </a>
                 </div>
             </div>
+            <nav class="nav flex align-center gap-58px" style="font-weight: 400">
+                <div>
+                    <a href="/">
+                        About
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        Map
+                    </a>
 
+                </div>
+                <div>
+                    <a href="#">
+                        Zoos
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        Contact us
+                    </a>
+                </div>
+                <div>
+                    <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">
+                        Designed by &copy
+                    </a>
+                </div>
+            </nav>
+            <div class="designed-by-text">
+                <div>Designed by Alisa Samborskaya</div>
+                <div>©RSSchool & ©Yem Digital 2022</div>
+            </div>
         </div>
     </div>
 </footer>
