fix: fich and feed a friend change tag to h2

--- a/index.html
+++ b/index.html
@@ -614,9 +614,9 @@
 
     <section class="d-footer d-position_relative" style="width: 1600px; height: 1004px">
         <div class="d-inner_footer d-position_absolute">
-            <div class="d-pick_and_feed">
+            <h2 class="d-pick_and_feed">
                 Pick and feed a friend
-            </div>
+            </h2>
             <div class="d-we_know_the_animal">
                 We know the animals bring you joy, and in these extraordinary times, we’re glad.
             </div>
