--- a/index.html
+++ b/index.html
@@ -3,427 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing</title>
-    <link rel="stylesheet" href="pets.css">
     <link rel="stylesheet" href="testimonials.css">
-    <style>
-        :root {
-            --green: #4B9200;
-            --orang: #F9804B;
-            --orang_hover: #E47209;
-            --yellow: #FFEE2E;
-            --orange_grad: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
-            --pink_grad: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
-            --rad: #D31414;
-            --black_blue: #333B41;
-            --gray: #767474;
-            --gray_smokey: #ABABAB;
-            --light_gray: #F1F3F2;
-            --frosted_glass_white: rgba(253, 253, 255, 0.52);
-            --white: #FFFFFF;
-            --animal-online-height: 780px;
-        }
-
-        @font-face {
-            font-family: "Roboto";
-            src: url(/assets/fonts/Roboto-Regular.ttf);
-        }
-
-        body {
-            margin: 0 auto;
-            width: 1600px;
-            position: relative;
-        }
-
-        input {
-            border: 0;
-        }
-
-        button {
-            border: 0;
-            color: inherit;
-        }
-
-        a {
-            color: inherit;
-            text-decoration: inherit;
-        }
-
-        h1 {
-            font-family: "Roboto", serif;
-            font-style: normal;
-            font-weight: 700;
-            margin: 0;
-        }
-
-        h2 {
-            margin: 0;
-            font-family: 'Roboto', serif;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 48px;
-            line-height: 120%;
-        }
-
-        .header {
-            background-color: black;
-            height: 80px;
-            color: #FFFFFF;
-        }
-
-        .outer-container {
-            width: 1600px;
-            margin: 0 auto;
-        }
-
-        .logo {
-            position: relative;
-            margin-right: 63px;
-            color: white;
-            /*background-color: black;*/
-            width: min-content;
-        }
-
-        .logo-text {
-            font-size: 19.0145px;
-            line-height: 120%;
-            text-align: center;
-            font-style: normal;
-            font-weight: normal;
-            vertical-align: center;
-        }
-
-        .container {
-            width: 1160px;
-        }
-
-        .nav {
-            font-family: "Roboto", serif;
-            font-size: 16px;
-            font-weight: normal;
-        }
-
-        .nav a {
-            transition: ease 0.3s;
-        }
-
-        .nav a:hover {
-            color: #F9804B;
-            transition: ease 0.3s;
-        }
-
-        .flex {
-            display: flex;
-        }
-
-        .flex-column {
-            flex-direction: column;
-        }
-
-        .absolute {
-            position: absolute;
-        }
-
-        .relative {
-            position: relative;
-        }
-
-        .wrap {
-            flex-wrap: wrap;
-        }
-
-        .align-center {
-            align-items: center;
-        }
-
-        .align-end {
-            align-items: end;
-        }
-
-        .justify-center {
-            justify-content: center;
-        }
-
-        .justify-between {
-            justify-content: space-between;
-        }
-
-        .inline-block {
-            display: inline-block;
-        }
-
-        .gap-58px {
-            gap: 58px;
-        }
-
-        .ellipse-6 {
-            width: 465px;
-            height: 465px;
-            left: calc(50% - 465px / 2 + 239.5px);
-            top: 92px;
-        }
-
-        .animal-online-height {
-            height: var(--animal-online-height);
-        }
-
-        .panda-text {
-            width: 500.31px;
-            height: 400px;
-            left: calc(50% - 500.31px / 2 + 330.15px);
-            top: 166px;
-            font-family: 'Roboto', serif;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 106.496px;
-            line-height: 75%;
-            /* or 80px */
-            text-align: center;
-            text-transform: uppercase;
-        }
-
-        .text-white {
-            color: var(--white)
-        }
-
-        .text-black-blue {
-            color: var(--black_blue);
-        }
-
-        .text-yellow {
-            color: var(--yellow);
-        }
-
-        .roboto-normal {
-            font-family: 'Roboto', serif;
-            font-style: normal;
-            font-weight: 400;
-        }
-
-        .btn {
-            font-family: 'Roboto', serif;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 140%;
-            /* or 22px */
-            text-transform: uppercase;
-        }
-
-        .btn_1 {
-            width: 298px;
-            height: 54px;
-            background: var(--orang);
-            border-radius: 25px;
-            color: var(--white);
-            cursor: pointer;
-            text-align: center;
-        }
-
-        .btn_1:hover {
-            background: var(--orang_hover);
-        }
-
-        .btn_1:active {
-            background: var(--green);
-        }
-
-        .btn_1:disabled {
-            background: var(--gray);
-        }
-
-        .rectangle-8 {
-            border-radius: 5px;
-        }
-
-        .full {
-            left: 0;
-            right: 0;
-            bottom: 0;
-            top: 0;
-        }
-
-        .flex-half {
-            width: 50%;
-        }
-
-        .bamboo-cap {
-            width: 609px;
-            height: 403px;
-            background: url("/assets/img/bamboo-cap.png");
-            backdrop-filter: blur(2px);
-        }
-
-        .subtitle {
-            font-family: 'Roboto', serif;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 120%;
-        }
-
-        .flower-photo {
-            position: absolute;
-            width: 200px;
-            height: 605px;
-            right: 0;
-            top: 792px;
-            background: url(/assets/img/flower_foto1.png);
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        }
-
-        .foto-card {
-            box-sizing: border-box;
-            border: 1px solid var(--orang);
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 5px;
-            transition: ease 0.3s;
-        }
-
-        .rectangle {
-            position: relative;
-            width: 365px;
-            height: 366px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .card-image {
-            width: 100%;
-            height: 100%;
-            z-index: 5;
-        }
-
-        .rectangle:hover > .foto-card > .card-image {
-            height: calc(366px + 20px);
-            width: calc(365px + 20px);
-            transition: ease 0.3s;
-        }
-
-        .rectangle:hover > .foto-card {
-            width: calc(367px + 20px);
-            height: calc(366px + 87px);
-            transition: ease 0.3s;
-            z-index: 1000;
-            background: white;
-        }
-
-        .foto-card-text-holder {
-            position: absolute;
-            bottom: 0;
-            margin-left: 16px;
-            padding-bottom: 10px;
-            z-index: -15;
-
-        }
-
-        .small-paragraph {
-            font-family: 'Roboto', serif;
-            font-style: normal;
-            font-weight: 300;
-            font-size: 15px;
-            line-height: 120%;
-        }
-
-        .card-icon {
-            position: absolute;
-            bottom: 10px;
-            right: 16px;
-            z-index: -30;
-        }
-
-        .ellipse-1 {
-            border-radius: 9999px;
-            width: 62px;
-            height: 62px;
-            background: var(--orang);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-        }
-
-        .ellipse-1:active {
-            background: var(--green);
-        }
-
-        .palm-photo {
-            position: absolute;
-            width: 292px;
-            height: 460px;
-            left: 0;
-            bottom: -100px;
-            background: url(/assets/img/palm_foto.png);
-        }
-
-        .strelitza_1 {
-            position: absolute;
-            width: 368px;
-            height: 275px;
-            right: 0;
-            bottom: -100px;
-            background: url(/assets/img/strelitzia_1.png);
-        }
-
-        .email-button {
-            box-sizing: border-box;
-            /* gray_light */
-            background: #F1F3F2;
-            /* black_blue */
-            border: 1px solid #333B41;
-            border-radius: 5px;
-            width: 129px;
-            height: 42px;
-        }
-
-        .footer {
-            background-color: #111115;
-        }
-
-        .input {
-            border-width: 1px;
-            border-style: solid;
-            border-color: #333B41;
-            height: 42px;
-            border-radius: 2px;
-            background-color: transparent;
-        }
-
-        .input:focus {
-            border-color: green;
-        }
-
-        .input:invalid {
-            border-color: var(--rad);
-        }
-
-        .email-input {
-            box-sizing: border-box;
-
-            border-color: var(--orang);
-            color: white;
-        }
-
-        .social-ellipse {
-            border-radius: 9999px;
-            width: 26px;
-            height: 26px;
-            background: rgba(196, 196, 196, 0.5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .mr-12px {
-            margin-right: 12px;
-        }
-    </style>
+    <link rel="stylesheet" href="pets.css">
 </head>
 <body>
 <div class="flower-photo"></div>
-<header class="header flex align-center absolute outer-container" style="z-index: 20">
+<header class="header flex align-center absolute outer-container flex justify-center" style="z-index: 20">
     <div class="container flex">
         <div class="logo flex align-center">
             <a class="relative" style="display: block; height: 52px; width: 82px" href="/">
