add meta viewport

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Landing</title>
     <link rel="stylesheet" href="testimonials.css">
     <link rel="stylesheet" href="pets.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 <div class="flower-photo"></div>
