init: add online-zoo folder

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -14,11 +14,11 @@
         <div class="container flex">
             <div class="logo flex align-center">
                 <a class="relative" style="display: block; height: 52px; width: 82px" href="/">
-                    <object class="absolute" style="top: 0; left: 0" data="/assets/svg/logo/old/Rectangle%204.svg"></object>
+                    <object class="absolute" style="top: 0; left: 0" data="/online-zoo/assets/svg/logo/old/Rectangle%204.svg"></object>
                     <object class="absolute" style="top: 23.64px; left: 9px; z-index: 200"
-                            data="/assets/svg/logo/old/bamboo.svg"></object>
+                            data="/online-zoo/assets/svg/logo/old/bamboo.svg"></object>
                     <h1 class="absolute logo-text" style="top: 5px; left: 0;">PetStory Online</h1>
-                    <img height="52" width="82" src="/assets/svg/logo/logo_footer.svg" alt="no image">
+                    <img height="52" width="82" src="/online-zoo/assets/svg/logo/logo_footer.svg" alt="no image">
                 </a>
             </div>
             <nav class="nav flex align-center gap-58px">
@@ -55,8 +55,8 @@
 
 <main class="outer-container">
     <section id="watch-your-favourite-animal-online" class="relative animal-online-height" style="object-fit: contain">
-        <img src="/assets/img/giant_panda.png" class="absolute animal-online-height">
-        <object data="/assets/svg/ellipse_6.svg" class="absolute ellipse-6"></object>
+        <img src="/online-zoo/assets/img/giant_panda.png" class="absolute animal-online-height" alt="">
+        <object data="/online-zoo/assets/svg/ellipse_6.svg" class="absolute ellipse-6"></object>
         <h1 class="panda-text absolute text-white">
             watch your <span class="text-yellow">favourite</span> animal online
         </h1>
@@ -92,12 +92,12 @@
         <div>
             <div class="flex align-center justify-center" style="margin-top: 180px; gap: 20px">
                 <div class="ellipse-1 pc-only">
-                    <object data="/assets/svg/arrows/arrow-left.svg"></object>
+                    <object data="/online-zoo/assets/svg/arrows/arrow-left.svg"></object>
                 </div>
                 <div class="container flex wrap" style="gap: 20px 30px">
                     <div class="rectangle">
                         <div class="foto-card">
-                            <img src="/assets/img/pets-block/pandas.png" class="card-image" alt="">
+                            <img src="/online-zoo/assets/img/pets-block/pandas.png" class="card-image" alt="">
                             <div class="foto-card-text-holder">
                                 <div class="btn" style="margin-top: 8px;">giant pandas</div>
                                 <article class="small-paragraph">
@@ -106,13 +106,13 @@
                             </div>
                             <object
                                     class="card-icon"
-                                    data="/assets/svg/icons/banana-bamboo_icon.svg"
+                                    data="/online-zoo/assets/svg/icons/banana-bamboo_icon.svg"
                             ></object>
                         </div>
                     </div>
                     <div class="rectangle">
                         <div class="foto-card">
-                            <img src="/assets/img/pets-block/eagle.png" class="card-image" alt="">
+                            <img src="/online-zoo/assets/img/pets-block/eagle.png" class="card-image" alt="">
                             <div class="foto-card-text-holder">
                                 <div class="btn" style="margin-top: 8px;">eagle</div>
                                 <article class="small-paragraph">
@@ -121,13 +121,13 @@
                             </div>
                             <object
                                     class="card-icon"
-                                    data="/assets/svg/icons/meet-fish_icon.svg"
+                                    data="/online-zoo/assets/svg/icons/meet-fish_icon.svg"
                             ></object>
                         </div>
                     </div>
                     <div class="rectangle">
                         <div class="foto-card">
-                            <img src="/assets/img/pets-block/gorillaz.png" class="card-image" alt="">
+                            <img src="/online-zoo/assets/img/pets-block/gorillaz.png" class="card-image" alt="">
                             <div class="foto-card-text-holder">
                                 <div class="btn" style="margin-top: 8px;">Gorillas</div>
                                 <article class="small-paragraph">
@@ -136,13 +136,13 @@
                             </div>
                             <object
                                     class="card-icon"
-                                    data="/assets/svg/icons/banana-bamboo_icon.svg"
+                                    data="/online-zoo/assets/svg/icons/banana-bamboo_icon.svg"
                             ></object>
                         </div>
                     </div>
                     <div class="rectangle">
                         <div class="foto-card">
-                            <img src="/assets/img/pets-block/sloth.png" class="card-image" alt="">
+                            <img src="/online-zoo/assets/img/pets-block/sloth.png" class="card-image" alt="">
                             <div class="foto-card-text-holder">
                                 <div class="btn" style="margin-top: 8px;">Two-toed Sloth</div>
                                 <article class="small-paragraph">
@@ -151,13 +151,13 @@
                             </div>
                             <object
                                     class="card-icon"
-                                    data="/assets/svg/icons/banana-bamboo_icon.svg"
+                                    data="/online-zoo/assets/svg/icons/banana-bamboo_icon.svg"
                             ></object>
                         </div>
                     </div>
                     <div class="rectangle">
                         <div class="foto-card">
-                            <img src="/assets/img/pets-block/cheetas.png" class="card-image" alt="">
+                            <img src="/online-zoo/assets/img/pets-block/cheetas.png" class="card-image" alt="">
                             <div class="foto-card-text-holder">
                                 <div class="btn" style="margin-top: 8px;">cheetas</div>
                                 <article class="small-paragraph">
@@ -166,13 +166,13 @@
                             </div>
                             <object
                                     class="card-icon"
-                                    data="/assets/svg/icons/meet-fish_icon.svg"
+                                    data="/online-zoo/assets/svg/icons/meet-fish_icon.svg"
                             ></object>
                         </div>
                     </div>
                     <div class="rectangle">
                         <div class="foto-card">
-                            <img src="/assets/img/pets-block/penguins.png" class="card-image" alt="">
+                            <img src="/online-zoo/assets/img/pets-block/penguins.png" class="card-image" alt="">
                             <div class="foto-card-text-holder">
                                 <div class="btn" style="margin-top: 8px;">Penguins</div>
                                 <article class="small-paragraph">
@@ -181,13 +181,13 @@
                             </div>
                             <object
                                     class="card-icon"
-                                    data="/assets/svg/icons/banana-bamboo_icon.svg"
+                                    data="/online-zoo/assets/svg/icons/banana-bamboo_icon.svg"
                             ></object>
                         </div>
                     </div>
                 </div>
                 <div class="ellipse-1 pc-only">
-                    <object data="/assets/svg/arrows/arrow-right.svg"></object>
+                    <object data="/online-zoo/assets/svg/arrows/arrow-right.svg"></object>
                 </div>
 
 
@@ -273,12 +273,12 @@
             <div class="logo flex align-center">
                 <a class="relative" style="display: block; height: 52px; width: 82px" href="/">
                     <object class="absolute" style="top: 0; left: 0"
-                            data="/assets/svg/logo/old/Rectangle%204.svg"></object>
+                            data="/online-zoo/assets/svg/logo/old/Rectangle%204.svg"></object>
                     <object class="absolute" style="top: 23.64px; left: 9px; z-index: 200"
-                            data="/assets/svg/logo/old/bamboo.svg"></object>
+                            data="/online-zoo/assets/svg/logo/old/bamboo.svg"></object>
                     <h1 class="absolute logo-text" style="top: 5px; left: 0;">PetStory Online</h1>
 
-                    <!--                    <img height="52" width="82" src="/assets/svg/logo/logo_footer.svg" alt="no image">-->
+                    <!--                    <img height="52" width="82" src="/online-zoo/assets/svg/logo/logo_footer.svg" alt="no image">-->
                 </a>
             </div>
             <div>
@@ -297,7 +297,7 @@
             <div class="flex flex-column" style="gap: 10px">
                 <div class="flex align-center">
                     <div class="social-ellipse mr-12px">
-                        <object data="/assets/svg/social/facebook.svg"></object>
+                        <object data="/online-zoo/assets/svg/social/facebook.svg"></object>
                     </div>
                     <a href="https://www.facebook.com/">
                         Facebook
@@ -306,7 +306,7 @@
                 </div>
                 <div class="flex align-center">
                     <div class="social-ellipse mr-12px">
-                        <object data="/assets/svg/social/twitter.svg"></object>
+                        <object data="/online-zoo/assets/svg/social/twitter.svg"></object>
                     </div>
                     <a href="https://twitter.com/">
                         Twitter
@@ -314,7 +314,7 @@
                 </div>
                 <div class="flex align-center">
                     <div class="social-ellipse mr-12px">
-                        <object data="/assets/svg/social/instagram.svg"></object>
+                        <object data="/online-zoo/assets/svg/social/instagram.svg"></object>
                     </div>
                     <a href="https://www.instagram.com/">
                         Instagram
@@ -322,7 +322,7 @@
                 </div>
                 <div class="flex align-center">
                     <div class="social-ellipse mr-12px">
-                        <object data="/assets/svg/social/youtube.svg"></object>
+                        <object data="/online-zoo/assets/svg/social/youtube.svg"></object>
                     </div>
                     <a href="https://youtube.com">
                         YouTube
