--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -1,10 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Donate page</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <title>Online Zoo</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
 
+<body>
+    <div class="mask"></div>
+
+    <header class="header">
+        <div class="container">
+
+
+            <div class="navbar">
+                <div class="navbar-tools">
+                    <a class="logo" href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/">
+                        <h1 class="logo-image">PetStory<br /> online</h1>
+                        <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="logo" />
+                    </a>
+                    <ul class="navbar-nav">
+                        <li class="navbar-nav__link">
+                            <a href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/">About</a>
+                        </li>
+                        <li class="navbar-nav__link">
+                            <a href="#">Map</a>
+                        </li>
+                        <li class="navbar-nav__link">
+                            <a href="#">Zoos</a>
+                        </li>
+                        <li class="navbar-nav__link active">
+                            <a href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/pages/donate/">Donate</a>
+                        </li>
+                        <li class="navbar-nav__link">
+                            <a href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <img class="burger-menu" src="../../assets/images/burger_menu.png" alt="burger_menu">
+                <div class="desinged__link">
+                    <li class="navbar-nav__link">
+                        <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=126%3A0">
+                            Designed by ©
+                        </a>
+                    </li>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="navbar-menu">
+        <div class="navbar-menu-wrapper">
+            <a class="logo" href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/">
+                <h1 class="logo-image">PetStory<br /> online</h1>
+                <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="logo" />
+            </a>
+            <img class="navbar-menu-close" src="../../assets/images/x-menu.png" alt="x icon">
+        </div>
+        <ul class="navbar-nav">
+            <li class="navbar-nav__link active">
+                <a href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/">About</a>
+            </li>
+            <li class="navbar-nav__link">
+                <a href="#">Map</a>
+            </li>
+            <li class="navbar-nav__link">
+                <a href="#">Zoos</a>
+            </li>
+            <li class="navbar-nav__link">
+                <a href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/pages/donate/">Donate</a>
+            </li>
+            <li class="navbar-nav__link">
+                <a href="#">Contact Us</a>
+            </li>
+            <li class="navbar-nav__link">
+                <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=126%3A0">
+                    Designed by ©
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <section class="main"></section>
+
+    <section class="donate__info">
+        <div class="container">
+            <div class="donate__info-header">
+                <h2 class="donate__info-header-title">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h2>
+                <p class="donate__info-header-desc">
+                    Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these
+                    challenges. We have been actively raising funds in the community, and we are grateful for the generosity. But much more support is still needed, and we need your help! Please consider a gift today – no matter what <br
+                    />size – to help us sustain our mission.
+                </p>
+                <h2 class="donate__info-header-text">Donation Information</h2>
+            </div>
+            <div class="donate__info-card">
+                <h2 class="donate__info-card-title">
+                    Pick and feed a friend
+                </h2>
+                <p class="donate__info-card-desc">
+                    We know the animals bring you joy, and in these extraordinary times, we’re glad.
+                </p>
+                <div class="donate__info-card-row">
+                    <div class="donate__info-card-row-wrap">
+                        <h2 class="donate__info-card-row-x">
+                            4
+                        </h2>
+                        <div class="donate__info-card-row-desc">
+                            Panda diet for the day.
+                        </div>
+                    </div>
+                    <img class="x-icon" src="../../assets/images/x_icon.png" alt="X">
+                    <img class="panda-img" src="../../assets/images/panda_widget1.png" alt="panda">
+                </div>
+                <div class="amount__range">
+                    <div class="amount__range-block">
+                        <div class="amount__range-block-wrap tablet__none">
+                            <input name="checked" class="amount__radio" type="radio" id="5000" name="5000" value="5000">
+                            <label class="amount__range-block-label" for="5000">$5000</label>
+                        </div>
+
+                        <div class="amount__range-block-wrap tablet__none">
+                            <input name="checked" class="amount__radio" type="radio" id="2000" name="2000" value="2000">
+                            <label class="amount__range-block-label" for="2000">$2000</label>
+                        </div>
+
+                        <div class="amount__range-block-wrap tablet__none">
+                            <input checked name="checked" class="amount__radio" type="radio" id="1000" name="1000" value="1000">
+                            <label class="amount__range-block-label" for="1000">$1000</label>
+                        </div>
+
+                        <div class="amount__range-block-wrap">
+                            <input name="checked" class="amount__radio" type="radio" id="500" name="500" value="500">
+                            <label class="amount__range-block-label" for="500">$500</label>
+                        </div>
+
+                        <div class="amount__range-block-wrap">
+                            <input name="checked" class="amount__radio" type="radio" id="250" name="250" value="250">
+                            <label class="amount__range-block-label" for="250">$250</label>
+                        </div>
+
+                        <div class="amount__range-block-wrap">
+                            <input name="checked" class="amount__radio" type="radio" id="100" name="100" value="100">
+                            <label class="amount__range-block-label" for="100">$100</label>
+                        </div>
+
+                        <div class="amount__range-block-wrap">
+                            <input name="checked" class="amount__radio" type="radio" id="50" name="50" value="50">
+                            <label class="amount__range-block-label last__label" for="50">$50</label>
+                        </div>
+
+                        <div class="amount__range-block-wrap">
+                            <input name="checked" class="amount__radio" type="radio" id="25" name="25" value="25">
+                            <label class="amount__range-block-label last__label" for="25">$25</label>
+                        </div>
+
+                    </div>
+                </div>
+                <form class="amount__form" action="">
+                    <div class="amount__form-wrap">
+                        <input class="amount__input" type="number" placeholder="Another amount" min="1" max="9999">
+                    </div>
+                    <div class="amount__form-radio">
+                        <div class="amount__form-radio-label">
+                            <input name="payment" class="amount__form-radio-el" type="radio" id="monthly">
+                            <label for="monthly">Monthly</label>
+                        </div>
+                        <div class="amount__form-radio-label">
+                            <input name="payment" checked class="amount__form-radio-el" type="radio" id="once">
+                            <label for="once">Once</label>
+                        </div>
+                    </div>
+                </form>
+                <div class="amount__button-wrap">
+                    <a class="amount__button" type="submit">Feed a friend now</a>
+                </div>
+                <p class="amount__text">Share with your friends on social networks </p>
+            </div>
+
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__content-header">
+                    <div class="footer__content-header-logo">
+                        <a class="logo" href="http://127.0.0.1:5500/online-zoo/index.html">
+                            <h2 class="logo-image">PetStory<br /> online</h2>
+                            <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="logo" />
+                        </a>
+                    </div>
+                    <div class="footer__content-header-wrap">
+                        <h2 class="footer__content-header-wrap-title">Subscribe to our news</h2>
+                        <div class="footer__content-header-form">
+                            <input class="footer__content-header-wrap-input" placeholder="Enter your email" type="email">
+                            <button type="submit" class="footer__content-header-btn">Submit</button>
+                        </div>
+                    </div>
+                </div>
+                <a href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/pages/donate/" class="main__content-button test-btn">
+                    donate for volunteers
+                </a>
+
+                <div class="footer__content-bottom">
+
+                    <div class="footer__content-bottom-socials">
+                        <div class="footer__content-bottom-socials-wrap">
+                            <a href="#">
+                                <div class="social-icon-bg">
+                                    <img src="../../assets/images/facebook.png" alt="facebook">
+                                </div>
+                                <h2 class="social-icon-name">Facebook</h2>
+                            </a>
+                        </div>
+                        <div class="footer__content-bottom-socials-wrap sp__class">
+                            <a href="#">
+                                <div class="social-icon-bg">
+                                    <img src="../../assets/images/twitter.png" alt="twitter">
+                                </div>
+                                <h2 class="social-icon-name">Twitter</h2>
+                            </a>
+                        </div>
+                        <div class="footer__content-bottom-socials-wrap sp__class">
+                            <a href="#">
+                                <div class="social-icon-bg">
+                                    <img src="../../assets/images/Fill 166.png" alt="Instagram">
+                                </div>
+                                <h2 class="social-icon-name">Instagram</h2>
+                            </a>
+                        </div>
+                        <div class="footer__content-bottom-socials-wrap sp__class">
+                            <a href="#">
+                                <div class="social-icon-bg">
+                                    <img src="../../assets/images/youtube.png" alt="youtube">
+                                </div>
+                                <h2 class="social-icon-name">YouTube</h2>
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <div class="footer-navbar">
+                        <ul class="navbar-nav">
+                            <li class="navbar-nav__link">
+                                <a href="#">About</a>
+                            </li>
+                            <li class="navbar-nav__link">
+                                <a href="#">Map</a>
+                            </li>
+                            <li class="navbar-nav__link">
+                                <a href="#">Zoos</a>
+                            </li>
+                            <li class="navbar-nav__link">
+                                <a href="#">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__info">
+                        <p class="footer__info-title">Designed by Alisa Samborskaya <br /> ©RSSchool & ©Yem Digital 2021</p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <script src="../../index.js"></script>
 </body>
+
 </html>
