fix: fixed class

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta name="description" content="this is site about animals in wild environment">
+    <meta name="keyword" content="giand pandas, eagles, gorillas, cheetahs, penguins">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +17,10 @@
 <body>
     <header class="header">
         <div class="container">
-
-
             <div class="navbar">
                 <div class="navbar-tools">
-                    <a class="logo" href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/">
+                    <a class="logo"
+                       href="https://rolling-scopes-school.github.io/msultanovdev-JSFE2022Q3/online-zoo/">
                         <h1 class="logo-image">PetStory<br /> online</h1>
                         <img class="logo-bamboo" src="./assets/images/bamboo.png" alt="logo" />
                     </a>
